# swagger.json
@@ -152,6 +152,46 @@
           }
         }
       }
+    },
+    "/skillset/list": {
+      "post": {
+        "tags": ["skillset"],
+        "summary": "List skills",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/FilterOrder"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully fetched",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "properties": {
+                    "item": {
+                      "type":"object",
+                      "properties": {
+                        "consultant_id": {
+                          "type": "integer",
+                          "description": "id of the consultant"
+                        },
+                        "skill_name": { "type": "string"},
+                        "years_of_experience": { "type": "integer"}
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
